--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,14 +35,12 @@ dev = [
     "pytest-cov==6.2.1",
     "pytest-freezegun==0.4.2",
     "pytest-mock>=3.14.0,<4.0.0",
-    "black==25.1.0",
+    "ruff>=0.8.0,<1.0.0",
     "sphinx==8.1.3",
     "sphinx_rtd_theme>=0.5,<3.1",
     "pre-commit==4.3.0",
-    "isort>=5.13.2,<7.0.0",
     "bandit>=1.7.10,<2.0.0",
     "pytest-it>=0.1.5,<0.2.0",
-    "flake8==7.3.0",
     "mypy==1.17.1",
     "types-requests>=2.32.0,<3.0.0",
     "types-PyYAML>=6.0.12,<6.1.0",
@@ -57,14 +55,17 @@ scanapi = "scanapi:main"
 Homepage = "https://scanapi.dev/"
 Repository = "https://github.com/scanapi/scanapi"
 
-[tool.isort]
-multi_line_output = 3
-include_trailing_comma = true
+[tool.ruff]
+line-length = 80
+exclude = [".git", "__pycache__", "docs/source/conf.py", "old", "build", "dist", ".venv"]
 
-[tool.flake8]
-# ignore line length check and warnings
-ignore = "E501,W501,E231,W503"
-exclude = ".git,__pycache__,docs/source/conf.py,old,build,dist,.venv"
+[tool.ruff.lint]
+select = ["E", "F", "W", "I"]
+ignore = ["E501", "W501", "E231", "W503"]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
 
 [tool.mypy]
 check_untyped_defs = true
@@ -86,3 +87,4 @@ include = ["scanapi*"]
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
